[project]
name = "introduction-to-lang-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarryd Deane",email = "jarryd.deane@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.6.6,<0.7.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
